syntax = "proto3";

package chatroom.datapb;

message GroupMessage {
    uint32 user_id = 1;
    string user_name = 2;
    string msg = 3;
}