syntax = "proto3";

package chatroom.msgpb;

message LoginAck {
    bool success = 1;
    string errmsg = 2;
    string user_name = 3;
}